@@ -19,6 +19,11 @@ StartPollers=6
 # This parameter must be between 2 and 255
 StartTrappers=5
 
+# Listen interface for trapper. Trapper will listen all network interfaces
+# if this parameter is missing.
+
+#ListenIP=127.0.0.1
+
 # Listen port for trapping. Default port number is 10051. This parameter 
 # must be between 1024 and 32767
 
