@@ -1,5 +1,6 @@
 Changes for 1.1.4:
 
+ - support of ListenIP for ZABBIX server (Alexei)
  - changed PostgreSQL last OID function to pg_last_oid() (Alexei)
  - fix for start time in graph navigation (Alexei)
  - minor fix for Spanish translation (Alexei)
